tests/fixtures/invalid/list_mod_list.py
# Cannot modulo List[int] and List[int]
x: list[int] = [1, 2, 3] % [1, 2, 3]
